--- a/INSTALL_Debian-stable_12-bookworm.org
+++ b/INSTALL_Debian-stable_12-bookworm.org
@@ -105,42 +105,23 @@ complet en une seule commande :
 sudo apt update
 sudo apt upgrade
 sudo apt install \
-    # Terminal
-    tilix python3-nautilus powerline fonts-powerline most \
-    # Utilitaires
-    cmake git gparted htop mlocate net-tools pip rename sqlite3 fwupd tlp tlp-rdw localepurge flatpak gnome-software-plugin-flatpak \
-    # GNOME 
-    gnome-session gnome-icon-theme gnome-shell-extension-manager \
-    # Web 
-    chromium-browser epiphany-browser torbrowser-launcher privoxy nextcloud-desktop nautilus-nextcloud \
-    # Utilitaires web
-    cifs-utils dnsutils gftp gvncviewer network-manager-openconnect-gnome network-manager-vpnc-gnome openfortivpn network-manager-fortisslvpn-gnome revelation rsync screen unison \
-    # Polices 
-    fonts-arphic-ukai fonts-arphic-uming fonts-arphic-gkai00mp fonts-arphic-gbsn00lp fonts-arphic-bkai00mp fonts-arphic-bsmi00lp fonts-baekmuk fonts-bebas-neue fonts-crosextra-carlito fonts-crosextra-caladea fonts-ecolier-court fonts-ecolier-lignes-court fonts-firacode fonts-hack-ttf fonts-linuxlibertine ttf-mscorefonts-installer unifont \
-    # Emacs
-    emacs hunspell hunspell-en-gb hunspell-en-ca hunspell-en-us hunspell-fr libpoppler-glib-dev ditaa elpa-pdf-tools-server \
-    # Libre Office
-    libreoffice-style-sifr \
-    # R, packages R et dépendences R
-    r-base r-base-core r-base-dev r-recommended littler \
-    r-cran-rjags r-cran-rjava r-cran-rodbc r-cran-tkrplot \
-    libgdal-dev libproj-dev libgeos-dev libnetcdf-dev libv8-dev libgsl-dev libgmp-dev libmpfr-dev libcurl4-openssl-dev libssl-dev libxml2-dev libcairo2-dev libxt-dev libmagick++-dev libudunits2-dev libharfbuzz-dev libfribidi-dev libgit2-dev tcl-dev tk-dev opencl-headers \
-    # QGIS 
-    qgis \
-    # LaTex & PDF
-    texlive-full bibtex2html bookletimposer calibre gedit-latex-plugin gummi impressive ispell latex2rtf latexmk lcdf-typetools libtext-pdf-perl mupdf pdf2djvu pdf2svg pdfarranger pdfchain pdfsam pdftk poppler-utils qpdf xournal \
-    # Divers
-    homebank sweethome3d \
-    # Codecs
-    flac frei0r-plugins gnome-video-effects-frei0r gstreamer1.0-plugins-bad gstreamer1.0-plugins-ugly libdvd-pkg ubuntu-restricted-extras vorbis-tools vorbisgain && sudo dpkg-reconfigure libdvd-pkg \
-    # Audio/video
-    audacity cuetools easytag ffmpeg shntool soundconverter devede gnome-mpv mkvtoolnix pitivi sound-juicer sox subtitleeditor vlc youtube-dl \                                                              
-    # Images
-    gimp-gap gimp-gmic gimp-plugin-registry gimp-resynthesizer gthumb imagemagick inkscape \
-    # Musique
-    lilypond frescobaldi \
-    # Jeux/loisirs
-    chromium-bsu dosbox marble stellarium
+    `# Terminal` tilix python3-nautilus powerline fonts-powerline most \
+    `# Utilitaires` cmake git gparted htop mlocate net-tools pip rename sqlite3 fwupd tlp tlp-rdw localepurge flatpak gnome-software-plugin-flatpak \
+    `# GNOME` gnome-session gnome-icon-theme gnome-shell-extension-manager \
+    `# Web` chromium-browser epiphany-browser torbrowser-launcher privoxy nextcloud-desktop nautilus-nextcloud \
+    `# Utilitaires web` cifs-utils dnsutils gftp gvncviewer network-manager-openconnect-gnome network-manager-vpnc-gnome openfortivpn network-manager-fortisslvpn-gnome revelation rsync screen unison \
+    `# Polices` fonts-arphic-ukai fonts-arphic-uming fonts-arphic-gkai00mp fonts-arphic-gbsn00lp fonts-arphic-bkai00mp fonts-arphic-bsmi00lp fonts-baekmuk fonts-bebas-neue fonts-crosextra-carlito fonts-crosextra-caladea fonts-ecolier-court fonts-ecolier-lignes-court fonts-firacode fonts-hack-ttf fonts-linuxlibertine ttf-mscorefonts-installer unifont \
+    `# Emacs` emacs hunspell hunspell-en-gb hunspell-en-ca hunspell-en-us hunspell-fr libpoppler-glib-dev ditaa elpa-pdf-tools-server \
+    `# Libre Office` libreoffice-style-sifr \
+    `# R` r-base r-base-core r-base-dev r-recommended littler r-cran-rjags r-cran-rjava r-cran-rodbc r-cran-tkrplot libgdal-dev libproj-dev libgeos-dev libnetcdf-dev libv8-dev libgsl-dev libgmp-dev libmpfr-dev libcurl4-openssl-dev libssl-dev libxml2-dev libcairo2-dev libxt-dev libmagick++-dev libudunits2-dev libharfbuzz-dev libfribidi-dev libgit2-dev tcl-dev tk-dev opencl-headers \
+    `# QGIS` qgis \
+    `# LaTex/PDF` texlive-full bibtex2html bookletimposer calibre gedit-latex-plugin gummi impressive ispell latex2rtf latexmk lcdf-typetools libtext-pdf-perl mupdf pdf2djvu pdf2svg pdfarranger pdfchain pdfsam pdftk poppler-utils qpdf xournal \
+    `# Divers` homebank sweethome3d \
+    `# Codecs` flac frei0r-plugins gnome-video-effects-frei0r gstreamer1.0-plugins-bad gstreamer1.0-plugins-ugly libdvd-pkg ubuntu-restricted-extras vorbis-tools vorbisgain && sudo dpkg-reconfigure libdvd-pkg \
+    `# Audio/video` audacity cuetools easytag ffmpeg shntool soundconverter devede gnome-mpv mkvtoolnix pitivi sound-juicer sox subtitleeditor vlc youtube-dl \                                                              
+    `# Images` gimp-gap gimp-gmic gimp-plugin-registry gimp-resynthesizer gthumb imagemagick inkscape \
+    `# Musique` lilypond frescobaldi \
+    `# Jeux/loisirs` chromium-bsu dosbox marble stellarium
 #+end_src
 
 Ajout des logiciels Flatpak :
