--- a/INSTALL_Debian-stable_12-bookworm.org
+++ b/INSTALL_Debian-stable_12-bookworm.org
@@ -79,7 +79,22 @@ l'installation.
 
 ** Installer le système complet
 
-Clés et dépôts (R et QGIS) :
+Dépôts Debian :
+
+#+begin_src sh
+sudo tee -a /etc/apt/sources.list <<EOF
+deb http://deb.debian.org/debian bookworm contrib main non-free-firmware
+# Bookworm updates, to get udpates before a poitn release is made:
+deb http://deb.debian.org/debian bookworm-updates contrib main non-free-firmware
+# Bookworm backports
+deb http://deb.debian.org/debian bookworm-backports contrib main
+non-free-firmware
+# Bookworm security
+deb http://security.debian.org/debian-security bookworm-security contrib main non-free-firmware
+EOF
+#+end_src
+
+Dépôts additionnels et clés (R et QGIS) :
 
 #+begin_src sh
 # R
@@ -106,14 +121,14 @@ sudo apt update
 sudo apt upgrade
 sudo apt install \
     `# Terminal` tilix python3-nautilus powerline fonts-powerline most \
-    `# Utilitaires` cmake git gparted htop mlocate net-tools pip rename sqlite3 fwupd tlp tlp-rdw localepurge flatpak gnome-software-plugin-flatpak \
+    `# Utilitaires` cmake git gparted htop mlocate net-tools python3-pip rename sqlite3 fwupd tlp tlp-rdw localepurge flatpak gnome-software-plugin-flatpak \
     `# GNOME` gnome-session gnome-icon-theme gnome-shell-extension-manager \
-    `# Web` chromium-browser epiphany-browser torbrowser-launcher privoxy nextcloud-desktop nautilus-nextcloud \
+    `# Web` chromium epiphany-browser torbrowser-launcher privoxy nextcloud-desktop nautilus-nextcloud \
     `# Utilitaires web` cifs-utils dnsutils gftp gvncviewer network-manager-openconnect-gnome network-manager-vpnc-gnome openfortivpn network-manager-fortisslvpn-gnome revelation rsync screen unison \
     `# Polices` fonts-arphic-ukai fonts-arphic-uming fonts-arphic-gkai00mp fonts-arphic-gbsn00lp fonts-arphic-bkai00mp fonts-arphic-bsmi00lp fonts-baekmuk fonts-bebas-neue fonts-crosextra-carlito fonts-crosextra-caladea fonts-ecolier-court fonts-ecolier-lignes-court fonts-firacode fonts-hack-ttf fonts-linuxlibertine ttf-mscorefonts-installer unifont \
     `# Emacs` emacs hunspell hunspell-en-gb hunspell-en-ca hunspell-en-us hunspell-fr libpoppler-glib-dev ditaa elpa-pdf-tools-server \
     `# Libre Office` libreoffice-style-sifr \
-    `# R` r-base r-base-core r-base-dev r-recommended littler r-cran-rjags r-cran-rjava r-cran-rodbc r-cran-tkrplot libgdal-dev libproj-dev libgeos-dev libnetcdf-dev libv8-dev libgsl-dev libgmp-dev libmpfr-dev libcurl4-openssl-dev libssl-dev libxml2-dev libcairo2-dev libxt-dev libmagick++-dev libudunits2-dev libharfbuzz-dev libfribidi-dev libgit2-dev tcl-dev tk-dev opencl-headers \
+    `# R` r-base r-base-core r-base-dev r-recommended littler r-cran-rjags r-cran-rjava r-cran-rodbc r-cran-tkrplot libgdal-dev libproj-dev libgeos-dev libnetcdf-dev libnode-dev libgsl-dev libgmp-dev libmpfr-dev libcurl4-openssl-dev libssl-dev libxml2-dev libcairo2-dev libxt-dev libmagick++-dev libudunits2-dev libharfbuzz-dev libfribidi-dev libgit2-dev tcl-dev tk-dev opencl-headers \
     `# QGIS` qgis \
     `# LaTex/PDF` texlive-full bibtex2html bookletimposer calibre gedit-latex-plugin gummi impressive ispell latex2rtf latexmk lcdf-typetools libtext-pdf-perl mupdf pdf2djvu pdf2svg pdfarranger pdfchain pdfsam pdftk poppler-utils qpdf xournal \
     `# Divers` homebank sweethome3d \
