--- a/INSTALL_Debian-stable_12-bookworm.org
+++ b/INSTALL_Debian-stable_12-bookworm.org
@@ -132,8 +132,8 @@ sudo apt install \
     `# QGIS` qgis \
     `# LaTex/PDF` texlive-full bibtex2html bookletimposer calibre gedit-latex-plugin gummi impressive ispell latex2rtf latexmk lcdf-typetools libtext-pdf-perl mupdf pdf2djvu pdf2svg pdfarranger pdfchain pdfsam pdftk poppler-utils qpdf xournal \
     `# Divers` homebank sweethome3d \
-    `# Codecs` flac frei0r-plugins gnome-video-effects-frei0r gstreamer1.0-plugins-bad gstreamer1.0-plugins-ugly libdvd-pkg ubuntu-restricted-extras vorbis-tools vorbisgain && sudo dpkg-reconfigure libdvd-pkg \
-    `# Audio/video` audacity cuetools easytag ffmpeg shntool soundconverter devede gnome-mpv mkvtoolnix pitivi sound-juicer sox subtitleeditor vlc youtube-dl \                                                              
+    `# Codecs` flac frei0r-plugins gnome-video-effects-frei0r gstreamer1.0-plugins-bad gstreamer1.0-plugins-ugly libdvd-pkg vorbis-tools vorbisgain && sudo dpkg-reconfigure libdvd-pkg \
+    `# Audio/video` audacity cuetools easytag ffmpeg shntool soundconverter devede gnome-mpv mkvtoolnix pitivi sound-juicer sox subtitleeditor vlc youtube-dl \
     `# Images` gimp-gap gimp-gmic gimp-plugin-registry gimp-resynthesizer gthumb imagemagick inkscape \
     `# Musique` lilypond frescobaldi \
     `# Jeux/loisirs` chromium-bsu dosbox marble stellarium
