--- a/INSTALL_Debian-stable_12-bookworm.org
+++ b/INSTALL_Debian-stable_12-bookworm.org
@@ -77,6 +77,9 @@ l'installation.
 
 ** Installer le système complet
 
+*L'installation complète prend environ 14 GB supplémentaires, pour un total de
+24 GB utilisés à la fin de la procédure.*
+
 Il faut tout d'abord mettre à jour la liste des dépôts Debian pour y inclure
 notamment les firmware propriétaires (=non-free-firmware=) et les paquets
 propriétaires (=non-free=) ou liés à des paquets propriétaires (=contrib=) :
@@ -132,7 +135,7 @@ sudo apt install \
     `# Web` chromium epiphany-browser torbrowser-launcher privoxy nextcloud-desktop nautilus-nextcloud \
     `# Utilitaires web` cifs-utils dnsutils gftp gvncviewer network-manager-openconnect-gnome network-manager-vpnc-gnome openfortivpn network-manager-fortisslvpn-gnome revelation rsync screen unison \
     `# Polices` fonts-arphic-ukai fonts-arphic-uming fonts-arphic-gkai00mp fonts-arphic-gbsn00lp fonts-arphic-bkai00mp fonts-arphic-bsmi00lp fonts-baekmuk fonts-bebas-neue fonts-crosextra-carlito fonts-crosextra-caladea fonts-ecolier-court fonts-ecolier-lignes-court fonts-firacode fonts-hack-ttf fonts-linuxlibertine ttf-mscorefonts-installer unifont \
-    `# Emacs` emacs hunspell hunspell-en-gb hunspell-en-ca hunspell-en-us hunspell-fr libpoppler-glib-dev ditaa elpa-pdf-tools-server \
+    `# Emacs` emacs hunspell hunspell-en-gb hunspell-en-ca hunspell-en-us hunspell-fr libpoppler-glib-dev ditaa elpa-pdf-tools-server sqlformat \
     `# Libre Office` libreoffice-style-sifr \
     `# R` r-base r-base-core r-base-dev r-recommended littler r-cran-rjags r-cran-rjava r-cran-rodbc r-cran-tkrplot libgdal-dev libproj-dev libgeos-dev libnetcdf-dev libnode-dev libgsl-dev libgmp-dev libmpfr-dev libcurl4-openssl-dev libssl-dev libxml2-dev libcairo2-dev libxt-dev libmagick++-dev libudunits2-dev libharfbuzz-dev libfribidi-dev libgit2-dev tcl-dev tk-dev opencl-headers \
     `# QGIS` qgis \
@@ -150,12 +153,6 @@ Ajout des logiciels Flatpak :
 #+begin_src sh
   sudo flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
   flatpak install flathub us.zoom.Zoom
-#+end_src
-
-Ajouts d'utilitaires Python :
-
-#+begin_src sh
-  sudo pip install format-sql
 #+end_src
 
 Effectuer une mise-à-jour de nettoyage pour terminer :
